<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <!--
         <item
        android:id="@+id/menu_settings"
        android:icon="@android:drawable/ic_menu_compass"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/menu_settings"/>
    -->
    <item
        android:id="@+id/menu_sort"
        android:icon="@drawable/ic_action_sort_by_size"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/menu_sort">
        <menu>
            <item
                android:id="@+id/menu_sort_alph"
                android:orderInCategory="100"
                android:showAsAction="always"
                android:title="@string/menu_sort_alph">
            </item>
            <item
                android:id="@+id/menu_sort_date"
                android:orderInCategory="150"
                android:showAsAction="always"
                android:title="@string/menu_sort_date">
            </item>
            <item
                android:id="@+id/menu_sort_amount"
                android:orderInCategory="200"
                android:showAsAction="always"
                android:title="@string/menu_sort_amount">
            </item>
        </menu>
    </item>
    <item
        android:id="@+id/menu_add_new_no_contact"
        android:icon="@drawable/ic_content_new"
        android:orderInCategory="150"
        android:showAsAction="ifRoom"
        android:title="@string/menu_add_new_no_contact">
    </item>
    <item
        android:id="@+id/menu_add_new"
        android:icon="@drawable/ic_social_add_person"
        android:orderInCategory="200"
        android:showAsAction="always"
        android:title="@string/menu_add_new">
    </item>
</menu>