<!-- Список долгов на карточке должника (DebitorFragment) -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="68dp"
    style="@style/LayoutListViewItem"
    android:orientation="vertical"
    android:id="@+id/layoutActivityDebitorDebtsList" >

    <TextView
        android:id="@+id/textViewDebitSum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextView"
        android:text="@string/fake_debit_sum"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textViewDebitDirection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextView.ListSubItem"
            android:text="@string/fake_debit_direction" />

        <TextView
            android:id="@+id/textViewDebitEventDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextView.ListSubItem"
            android:paddingLeft="4dp"
            android:text="@string/fake_debit_date" />

    </LinearLayout>

</LinearLayout>