<!-- Фрагмент карточки должника (DebitorFragment) -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/layoutDebitorTotalSum"
        android:orientation="vertical" >

        <ScrollView
            android:id="@+id/layoutScroll"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/layoutScrollChild"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textViewPersonalDataTitle"
                    style="@style/SectionTitle"
                    android:layout_width="fill_parent"
                    android:layout_height="32dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/title_personal_data" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/imageViewDebitorPhoto"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:contentDescription="@string/cont_descr_contact_picture"
                        android:src="@drawable/ic_contact_picture" />

                    <LinearLayout
                        android:id="@+id/layoutPersonalData"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_toLeftOf="@+id/buttonNoContactShowMoreFields"
                        android:layout_toRightOf="@+id/imageViewDebitorPhoto"
                        android:orientation="vertical"
                        android:paddingLeft="8dp" >

                        <EditText
                            android:id="@+id/editTextDebitorName"
                            style="@style/StandartEditText"
                            android:layout_width="fill_parent"
                            android:layout_height="40dp"
                            android:enabled="false"
                            android:hint="@string/hint_debitor_name"
                            android:inputType="textCapWords" />

                        <LinearLayout
                            xmlns:android="http://schemas.android.com/apk/res/android"
                            android:id="@+id/layoutNoContactDebitorAdditionalFields"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:visibility="gone" >

                            <EditText
                                android:id="@+id/editTextNoContactDebitorPhone"
                                style="@style/StandartEditText"
                                android:layout_width="fill_parent"
                                android:layout_height="40dp"
                                android:hint="@string/hint_debitor_phone"
                                android:inputType="phone" />

                            <EditText
                                android:id="@+id/editTextNoContactDebitorEmail"
                                style="@style/StandartEditText"
                                android:layout_width="fill_parent"
                                android:layout_height="40dp"
                                android:hint="@string/hint_debitor_email"
                                android:inputType="textEmailAddress" />
                        </LinearLayout>
                    </LinearLayout>

                    <ImageButton
                        android:id="@+id/buttonNoContactShowMoreFields"
                        style="@style/ImageButton"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:layout_centerVertical="true"
                        android:contentDescription="@string/cont_descr_show_more_fields"
                        android:onClick="onButtonNoContactShowMoreFields"
                        android:src="@drawable/ic_navigation_expand"
                        android:visibility="gone" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/textViewCurrentDebtTitle"
                    style="@style/SectionTitle"
                    android:layout_width="fill_parent"
                    android:layout_height="32dp"
                    android:text="@string/title_current_debt" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/EditRowBackground"

                    android:paddingBottom="16dp"
                    android:paddingTop="16dp" >

                    <ImageButton
                        android:id="@+id/buttonPlusDebit"
                        style="@style/ImageButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:contentDescription="@string/cont_descr_plus_debt"
                        android:onClick="onButtonPlusDebitClick"
                        android:paddingLeft="16dp"
                        android:src="@drawable/ic_content_new" />

                    <EditText
                        android:id="@+id/editTextAddDebit"
                        android:layout_width="fill_parent"
                        android:layout_height="48dp"
                        android:layout_centerInParent="true"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@+id/buttonMinusDebit"
                        android:layout_toRightOf="@+id/buttonPlusDebit"
                        android:inputType="numberDecimal"
                        android:minHeight="48dp"

                        android:textSize="@dimen/AddDebtItem" />

                    <ImageButton
                        android:id="@+id/buttonMinusDebit"
                        style="@style/ImageButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:contentDescription="@string/cont_descr_minus_debt"
                        android:onClick="onButtonMinusDebitClick"
                        android:paddingRight="16dp"
                        android:src="@drawable/ic_minus" />
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>

        <TextView
            android:id="@+id/textViewDebitsHistoryTitle"
            style="@style/SectionTitle"
            android:layout_width="fill_parent"
            android:layout_height="32dp"
            android:text="@string/title_debits_history"
            android:visibility="gone" />

        <ListView
            android:id="@+id/listViewDebits"
            style="@style/ListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layoutDebitorTotalSum"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/ch_top_line_divider_marign"
        android:padding="14dp" >

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:orientation="vertical" >

            <TextView
                style="@style/TextView.Total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textViewDebitDirection"
                style="@style/TextView.ListSubItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_no_debts" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewDebitsSum"
            style="@style/TextView.Sum"
            android:layout_width="80dp"
            android:layout_height="36dp"
            android:layout_alignParentRight="true"
            android:textStyle="bold" />
    </RelativeLayout>

</RelativeLayout>