<!-- Элемент списка должников (DebitorsListFragment) -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
                android:layout_height="68dp"
    style="@style/LayoutListViewItem" >

    <LinearLayout
        android:id="@+id/linearViewDebitorInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/textViewDebitorDebitSum"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageViewDebitorPhoto"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:contentDescription="@string/cont_descr_contact_picture"
            android:src="@drawable/ic_contact_picture" />

        <LinearLayout
            android:id="@+id/linearViewDebitorInfoTexts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="8dp" >

            <TextView
                android:id="@+id/textViewDebitorName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:lines="1"
                android:text="@string/fake_debitor"
                android:textSize="@dimen/StandartText" />

            <TextView
                android:id="@+id/textViewUpdateDate"
                android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                style="@style/TextView.ListSubItem"
                android:text="@string/fake_update_date" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textViewDebitorDebitSum"
        android:layout_width="80dp"
        android:layout_height="36dp"
        style="@style/TextView.Sum"
        android:layout_alignParentRight="true" />

</RelativeLayout>